--- a/.github/workflows/pandoc.yaml
+++ b/.github/workflows/pandoc.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: matrix
-        run: echo -E "value=[$(ls -Qm Chapter*.md | sed 's/\.md//g' | tr -d ' \n')]" >> "$GITHUB_OUTPUT"
+        run: echo -E "value=[$(ls -Qm *.md | sed 's/\.md//g' | tr -d ' \n')]" >> "$GITHUB_OUTPUT"
   build-pdf:
     needs: markdown_files
     runs-on: ubuntu-latest
