--- a/.github/workflows/md2pdf.yml
+++ b/.github/workflows/md2pdf.yml
@@ -1,69 +1,75 @@
-name: CI
+name: '📝 Generate PDF from Markdown'
+
 on:
+  workflow_dispatch:
+    inputs:
+      source-directory:
+        default: './docs'
+        type: string
+      output-directory:
+        default: './dist'
+        type: string
+
+  workflow_call:
+    inputs:
+      source-directory:
+        default: './docs'
+        type: string
+      output-directory:
+        default: './dist'
+        type: string
+      is-nest:
+        default: false
+        type: boolean
+
   push:
-    branches: [ main ]
+    paths:
+      - '.github/workflows/GeneratePDF.yaml'
+      - '.md-pdf/**'
+      - 'docs/**'
+
+env:
+  TZ: Asia/Tokyo
+  SOURCE_DIRECTORY: ${{ inputs.source-directory || './docs' }}
+  OUTPUT_DIRECTORY: ${{ inputs.output-directory || './dist' }}
+  NESTED_OUTPUT_DIRECTORY: ${{ inputs.output-directory || './dist' }}${{ inputs.is-nest && '/**' }}
+
 jobs:
-  container-test-job:
+  generate-pdf:
     runs-on: ubuntu-latest
-    container:
-      image: kenichirokimura/md2pdf:latest
-      options: --cpus 1
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Git config
-        run: git config --local core.quotepath false
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v41
-      - name: Md2pdf
-        run: /usr/bin/md2pdf.sh ${{ steps.changed-files.outputs.all_modified_files }}
-      - name: Get Today's Date
-        id: date
+      - uses: actions/checkout@v2
+
+      - name: 💄 Install font
         run: |
-          echo "date=$(date '+%Y-%m-%d')" >> $GITHUB_OUTPUT
-      - name: Create Release
-        env:
-          GH_TOKEN: ${{ github.token }}
+          sudo apt install fonts-noto-cjk
+
+      - name: 🧹 Refresh output directory
         run: |
-          # 今日の日付を取得
-          date=${{ steps.date.outputs.date }}
+          shopt -s globstar
+          rm -rf ${{ env.OUTPUT_DIRECTORY }}
+          cp -R ${{ env.SOURCE_DIRECTORY }} ${{ env.OUTPUT_DIRECTORY }}
+          ls -a ${{ env.NESTED_OUTPUT_DIRECTORY }}/*
 
-          # 最後のコミットユーザーをpushするユーザとして指定する
-          git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
-          git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
+      - name: 📝 Generate PDF
+        run: |
+          shopt -s globstar
+          npx md-to-pdf --config-file ./.md-pdf/config.json ${{ env.NESTED_OUTPUT_DIRECTORY }}/*.md
 
-          # 既存のタグを検索
-          existing_tag=$(git tag -l | grep $date || true)
+      - name: 🗑 Remove markdown files
+        run: |
+          shopt -s globstar
+          rm -rf ${{ env.NESTED_OUTPUT_DIRECTORY }}/*.md
 
-          # タグを追加
-          if [ -z "$existing_tag" ]; then
-            git tag -a $date -m "Release for $date"
-            git push origin $date
-          fi
-
-          # 既存のリリースを検索
-          existing_release=$(gh release list | grep $date || true)
-
-          if [ -z "$existing_release" ]; then
-            # 既存のリリースが存在しない場合、新しいリリースを作成
-            gh release create $date --target master --notes "Release for $date"
-          fi
-      - name: Gets latest created release info
-        id: latest_release_info
-        uses: jossef/action-latest-release-info@v1.1.0
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: WebFreak001/deploy-nightly@v1.1.0
+      - name: 🚀 Push generate files to the repository
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
-          release_id: ${{ steps.latest_release_info.outputs.id }}
-          asset_path: ./docs.tgz
-          asset_name: docs-$$.tgz
-          asset_content_type: application/x-gzip
+        run: |
+          git remote set-url origin https://github-actions:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add .
+          COMMIT_DATE='📝 Generate PDF: '$(date +'%Y-%m-%d %H:%M:%S')
+          echo $COMMIT_DATE
+          git commit -m "${COMMIT_DATE}"
+          git push origin HEAD:${GITHUB_REF}
