--- a/.github/workflows/md2pdf.yml
+++ b/.github/workflows/md2pdf.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       source-directory:
-        default: './docs'
+        default: './document-test'
         type: string
       output-directory:
         default: './dist'
