--- a/.github/workflows/md2pdf.yml
+++ b/.github/workflows/md2pdf.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       source-directory:
-        default: './document-test'
+        default: './docs'
         type: string
       output-directory:
         default: './dist'
@@ -13,7 +13,7 @@ on:
   workflow_call:
     inputs:
       source-directory:
-        default: './document-test'
+        default: './docs'
         type: string
       output-directory:
         default: './dist'
@@ -24,13 +24,13 @@ on:
 
   push:
     paths:
-      - '.github/workflows/md2pdf.yaml'
+      - '.github/workflows/GeneratePDF.yaml'
       - '.md-pdf/**'
       - 'docs/**'
 
 env:
   TZ: Asia/Tokyo
-  SOURCE_DIRECTORY: ${{ inputs.source-directory || './document-test' }}
+  SOURCE_DIRECTORY: ${{ inputs.source-directory || './docs' }}
   OUTPUT_DIRECTORY: ${{ inputs.output-directory || './dist' }}
   NESTED_OUTPUT_DIRECTORY: ${{ inputs.output-directory || './dist' }}${{ inputs.is-nest && '/**' }}
 
