--- a/.github/workflows/md2pdf.yml
+++ b/.github/workflows/md2pdf.yml
@@ -54,7 +54,7 @@ jobs:
       - name: 📝 Generate PDF
         run: |
           shopt -s globstar
-          npx -p md-to-pdf-ng --yes --config-file ./.md-pdf/config.json ${{ env.NESTED_OUTPUT_DIRECTORY }}/*.md
+          npx -p md-to-pdf-ng --yes md-to-pdf --config-file ./.md-pdf/config.json ${{ env.NESTED_OUTPUT_DIRECTORY }}/*.md
 
       - name: 🗑 Remove markdown files
         run: |
