--- a/.github/workflows/md2pdf.yml
+++ b/.github/workflows/md2pdf.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: 📝 Generate PDF
         run: |
-          npx md-to-pdf-ng --config-file ./.md-pdf/config.json ${{ env.NESTED_OUTPUT_DIRECTORY }}/*.md
+          npx md-to-pdf-ng -v${{ env.NESTED_OUTPUT_DIRECTORY }}/image_test1.md
 
       - name: 🗑 Remove markdown files
         run: |
