--- a/.github/workflows/md2pdf.yml
+++ b/.github/workflows/md2pdf.yml
@@ -54,7 +54,7 @@ jobs:
       - name: 📝 Generate PDF
         run: |
           shopt -s globstar
-          npx md-to-pdf-ng ${{ env.NESTED_OUTPUT_DIRECTORY }}/*.md
+          npx md-to-pdf ${{ env.NESTED_OUTPUT_DIRECTORY }}/*.md
 
       - name: 🗑 Remove markdown files
         run: |
